<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/action_launch_filterpanel"
          android:title="@string/action_launch_filterpanel"
          android:icon="@drawable/baricon"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_launch_listplaces"
          android:title="@string/action_launch_listplaces"
          android:icon="@drawable/baricon"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_launch_routeplanner"
          android:title="@string/action_launch_routeplanner"
          android:icon="@drawable/baricon"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_launch_autoplanner"
          android:title="@string/action_launch_autoplanner"
          android:icon="@drawable/baricon"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_launch_settingspanel"
          android:title="@string/action_launch_settingspanel"
          android:icon="@drawable/baricon"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_launch_databasedebugger"
          android:title="@string/action_launch_databasedebugger"
          android:showAsAction="never" />

</menu>
