<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/screen_background_dark" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="30dp" >

        <ImageView
            android:id="@+id/imageViewForeground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@android:drawable/screen_background_light" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="23dp"
            android:text="@string/fullinfo_namegoeshere"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewName"
            android:layout_marginLeft="29dp"
            android:layout_toRightOf="@+id/textViewName"
            android:text="@string/fullinfo_distancegoeshere"
            android:textColor="#808080"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageViewStar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imageViewStar2"
            android:layout_alignTop="@+id/textViewDistance"
            android:layout_marginRight="21dp"
            android:src="@android:drawable/star_off" />

        <ImageView
            android:id="@+id/imageViewStar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imageViewStar3"
            android:layout_alignTop="@+id/textViewDistance"
            android:layout_marginRight="21dp"
            android:src="@android:drawable/star_off" />

        <ImageView
            android:id="@+id/imageViewStar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imageViewStar4"
            android:layout_alignTop="@+id/textViewDistance"
            android:layout_marginRight="21dp"
            android:src="@android:drawable/star_off" />

        <ImageView
            android:id="@+id/imageViewStar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imageViewStar5"
            android:layout_alignTop="@+id/textViewDistance"
            android:layout_marginRight="21dp"
            android:src="@android:drawable/star_off" />

        <ImageView
            android:id="@+id/imageViewStar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textViewDistance"
            android:layout_marginRight="21dp"
            android:src="@android:drawable/star_off" />

        <ImageView
            android:id="@+id/imageViewImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewName"
            android:layout_below="@+id/imageViewStar1"
            android:layout_marginTop="25dp"
            android:visibility="invisible"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewName"
            android:layout_alignRight="@+id/imageViewStar1"
            android:layout_marginRight="220dp"
            android:layout_below="@+id/imageViewImage"
            android:layout_marginTop="23dp"
            android:text="@string/fullinfo_descriptiongoeshere"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewFeedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listViewFeed"
            android:layout_below="@+id/imageViewStar5"
            android:layout_marginTop="15dp"
            android:text="@string/fullinfo_feedtitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/listViewFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/imageViewStar5"
            android:layout_alignLeft="@+id/imageViewStar1"
            android:layout_marginLeft="-100dp"
            android:layout_alignTop="@+id/imageViewStar5"
            android:layout_marginTop="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp" >
        </ListView>

        <LinearLayout
		  android:layout_width="match_parent"
		  android:layout_height="50dp"
		  android:orientation="horizontal"
          android:layout_alignParentBottom="true">
        <Button
            android:layout_weight="1"
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Button
            android:layout_weight="1"
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Button
            android:layout_weight="1"
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Button
            android:layout_weight="1"
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />
		</LinearLayout>

    </RelativeLayout>

</RelativeLayout>